planes/phase-bs5-networkpolicy/execution-20260411-080421/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: networkpolicy-test
spec: {}
status: {}
